# nigelhaney.com

./: .gitignore  GOALS.md  LICENSE  README.md  TODO.md  default.nix  flake.nix  gatsby-config.js  justfile  package-lock.json  package.json  portfolio.toml  pyproject.toml  tailwind.config.js  testfonts.conf
.github/workflows/: main.yml
css/: tailwind.config.js
moose-ssg/: README.md
portfolio-generator/: .pylintrc  pyproject.toml
portfolio-generator/design/: resources.md
portfolio-generator/portfolio_generator/: builder.py  exceptions.py  main.py  post_processor.py  settings.py
portfolio-generator/portfolio_generator/resource_fetchers/: __init__.py  base.py  github_actions.py  google_doc.py  manager.py
portfolio-generator/tests/: conftest.py  portfolio.toml  test_portfolio_generator.py
portfolio-generator/tests/example_site/: base.html  index.html
portfolio-generator/tests/example_site/about/: index.html
portfolio_generator/: builder.py  main.py  settings.py
portfolio_generator/resource_fetchers/: base.py
public/: index.html
public/css/: icons.css  resume.css  tailwind.css
public/resume/: index.html
src/: index.html
src/components/: footer.js  header.js  layout.js
src/css/: resume.css
src/fish-game/: index.html
src/fonts/: icomoon.eot
src/gatsby-plugin-theme-ui/: index.js
src/js/: utils.js
src/pages/: 404.js  index.js
src/resume/: index.html
