[tool.poetry]
name = "portfolio-generator"
version = "0.1.0"
description = "Generates a static (portfolio) site from templated html and simple configuration."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
